lessonn(vim): Add basic lua config

--- a/install_apps/packages.conf
+++ b/install_apps/packages.conf
@@ -11,6 +11,7 @@ SYSTEM_UTILS=(
   stow                     # Symbolic link manager for managing dotfiles
   fastfetch                # Displays system info on startup
   fzf                       # Command-line fuzzy finder
+  zoxide
   zip                       # ZIP file compression
   unzip                     # ZIP file extraction
   wget                      # Command-line downloader
@@ -25,21 +26,19 @@ SYSTEM_UTILS=(
   hunspell-en_us            # English US dictionary for spell-checking
   hunspell-ru               # Russian dictionary for spell-checking
   hyphen-en                 # English hyphenation patterns
-  navi                      # Repeated entry (CLI cheatsheets browsing)
   nekoray-bin               # VPN client for secure browsing
   obsidian                  # Knowledge management software
   # okular                    # PDF and document viewer (KDE)
   zathura                   # Lightweight document viewer
-  opera                     # Web browser (Opera)
-  opera-ffmpeg-codecs-bin   # FFmpeg codecs for Opera browser
+  # opera                     # Web browser (Opera)
+  # opera-ffmpeg-codecs-bin   # FFmpeg codecs for Opera browser
   os-prober                 # Detects other operating systems for GRUB bootloader
-  otf-font-awesome          # OpenType fonts for Font Awesome icons
   qbittorrent               # Lightweight torrent client
   rainfrog                  # Download tool for torrents and streaming
   sddm                      # Display manager for login screen (Simple Desktop Display Manager)
   sddm-breath-theme         # Breath theme for SDDM
   serie                    # Custom app (unknown, possibly related to series management)
-  telegram-desktop-bin      # Desktop client for Telegram
+  # telegram-desktop-bin      # Desktop client for Telegram
   timeshift                 # System backup and restore tool
   yazi                      # CLI tool for managing directories and files
   zen-browser-bin           # Privacy-focused web browser
@@ -56,7 +55,7 @@ DEV_TOOLS=(
   git                       # Version control system
   git-toolbelt              # Git tool suite for enhanced workflows
   gitflow-avh               # GitFlow extension for Git to handle branches
-  vscode-bin                # Visual Studio Code (text editor)
+  # vscode-bin                # Visual Studio Code (text editor)
   visual-studio-code-bin    # Another package for VS Code (possibly different build)
   docker                    # Containerization platform for applications
   docker-compose            # Docker tool for defining and running multi-container applications
@@ -81,7 +80,7 @@ MEDIA=(
   vlc                       # Popular media player for video/audio playback
   mpv                       # Media player for videos and audio
   flameshot                 # Screenshot tool with annotations
-  gimp                      # Image editor (advanced)
+  # gimp                      # Image editor (advanced)
   imv                       # Image viewer for the terminal
   # obs-studio              # Commented out for now: Streaming and video recording tool
   cheese                    # Webcam application for Linux
@@ -93,6 +92,7 @@ MEDIA=(
 # Fonts
 # Font packages for better text display across applications.
 FONTS=(
+  otf-font-awesome          # OpenType fonts for Font Awesome icons
   noto-fonts                # Noto fonts for multilingual support
   noto-fonts-emoji          # Emoji fonts for better compatibility with Unicode
   noto-fonts-extra          # Additional Noto fonts for extended language support
