feat: Add waybar, rofi, and hypr configs

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -28,10 +28,11 @@ selection_background        none
 
 # Animated cursor follows text
 # include $HOME/.config/ml4w/settings/kitty-cursor-trail.conf
-
 # Include pywal colors
 include $HOME/.cache/wal/colors-kitty.conf
 
 # Include Custom Configuration
 # Create the file custom.conf in ~/.config/kitty to overwrite the default configuration
 include ./custom.conf
+
+confirm_os_window_close 0
