add: niri. waybar and rofi from sameemul-haque
https://github.com/sameemul-haque/dotfiles

--- a/hypr/.config/hypr/keys.conf
+++ b/hypr/.config/hypr/keys.conf
@@ -17,6 +17,7 @@ bind = $mainMod CTRL, E, exec, ~/.config/ml4w/settings/emojipicker.sh # Open the
 bind = $mainMod CTRL, C, exec, ~/.config/ml4w/settings/calculator.sh  # Open the calculator
 
 # Windows
+bind = $mainMod SHIFT, B, exec, $HYPRSCRIPTS/hide_panel.sh
 bind = $mainMod, Q, killactive                                                              # Kill active window
 bind = $mainMod SHIFT, Q, exec, hyprctl activewindow | grep pid | tr -d 'pid:' | xargs kill # Quit active window and all open instances
 bind = $mainMod, F, fullscreen, 0                                                           # Set active window to fullscreen
@@ -55,8 +56,8 @@ bind = $mainMod ALT, W, exec, $HYPRSCRIPTS/wallpaper-automation.sh              
 bind = $mainMod CTRL, RETURN, exec, pkill rofi || rofi -show drun -replace -i             # Open application launcher
 bind = $mainMod, D, exec, fuzzel
 bind = $mainMod CTRL, K, exec, $HYPRSCRIPTS/keybindings.sh                                # Show keybindings
-bind = $mainMod SHIFT, B, exec, ~/.config/waybar/launch.sh                                # Reload waybar
-bind = $mainMod CTRL, B, exec, ~/.config/waybar/toggle.sh                                 # Toggle waybar
+#bind = $mainMod SHIFT, B, exec, ~/.config/waybar/launch.sh                                # Reload waybar
+#bind = $mainMod CTRL, B, exec, ~/.config/waybar/toggle.sh                                 # Toggle waybar
 bind = $mainMod SHIFT, R, exec, $HYPRSCRIPTS/loadconfig.sh                                # Reload hyprland config
 bind = $mainMod, V, exec, $SCRIPTS/cliphist.sh                                            # Open clipboard manager
 bind = $mainMod CTRL, T, exec, ~/.config/waybar/themeswitcher.sh                          # Open waybar theme switcher
