--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -1,104 +1,238 @@
-//  Thanks to Bina
+// //  Thanks to Bina
+// {
+//   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+//
+//   "logo": {
+//       "source": "endeavouros.png",
+//       "padding": {
+//       "top": 2
+//       }
+//   },
+//   "display": {
+//         "separator": " ➜  "
+//   },
+//   "modules": [
+//       "break",
+//       "break",
+//       "break",
+//        {
+//           "type": "os",
+//           "key": "OS   ",
+//           "keyColor": "31",  // = color1
+//       },
+//       {
+//           "type": "kernel",
+//           "key": " ├  ",
+//           "keyColor": "31",
+//       },
+//       {
+//           "type": "shell",
+//           "key": " └  ",
+//           "keyColor": "31",
+//       },
+//       "break",
+//       {
+//           "type": "wm",
+//           "key": "WM   ",
+//           "keyColor": "32",
+//       },
+//       {
+//           "type": "wmtheme",
+//           "key": " ├ 󰉼 ",
+//           "keyColor": "32",
+//       },
+//       {
+//           "type": "icons",
+//           "key": " ├ 󰀻 ",
+//           "keyColor": "32",
+//       },
+//       {
+//           "type": "cursor",
+//           "key": " ├  ",
+//           "keyColor": "32",
+//       },
+//       {
+//           "type": "terminal",
+//           "key": " ├  ",
+//           "keyColor": "32",
+//       },
+//       {
+//           "type": "terminalfont",
+//           "key": " └  ",
+//           "keyColor": "32",
+//       },
+//       "break",
+//       {
+//           "type": "host",
+//           "format": "{5} {1} Type {2}",
+//           "key": "PC   ",
+//           "keyColor": "33",
+//       },
+//       {
+//           "type": "cpu",
+//           "format": "{1} ({3}) @ {7} GHz",
+//           "key": " ├  ",
+//           "keyColor": "33",
+//       },
+//       {
+//           "type": "gpu",
+//           "format": "{1} {2} @ {12} GHz",
+//           "key": " ├ 󰢮 ",
+//           "keyColor": "33",
+//       },
+//       {
+//           "type": "memory",
+//           "key": " ├  ",
+//           "keyColor": "33",
+//       },
+//       {
+//           "type": "swap",
+//           "key": " ├ 󰓡 ",
+//           "keyColor": "33",
+//       },
+//       {
+//           "type": "disk",
+//           "key": " ├ 󰋊 ",
+//           "keyColor": "33",
+//       },
+//       {
+//           "type": "monitor",
+//           "key": " └  ",
+//           "keyColor": "33",
+//       },
+//       "break",
+//       "break",
+//   ]
+// }
 {
-  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-  "logo": {
-      "padding": {
-      "top": 2
-      }
-  },
-  "display": {
-        "separator": " ➜  "
-  },
-  "modules": [
-      "break",
-      "break",
-      "break",
-       {
-          "type": "os",
-          "key": "OS   ",
-          "keyColor": "31",  // = color1
-      },
-      {
-          "type": "kernel",
-          "key": " ├  ",
-          "keyColor": "31",
-      },
-      {
-          "type": "shell",
-          "key": " └  ",
-          "keyColor": "31", 
-      },
-      "break",
-      {
-          "type": "wm",
-          "key": "WM   ",
-          "keyColor": "32", 
-      },
-      {
-          "type": "wmtheme",
-          "key": " ├ 󰉼 ",
-          "keyColor": "32",
-      },
-      {
-          "type": "icons",
-          "key": " ├ 󰀻 ",
-          "keyColor": "32",
-      },
-      {
-          "type": "cursor",
-          "key": " ├  ",
-          "keyColor": "32", 
-      },
-      {
-          "type": "terminal",
-          "key": " ├  ",
-          "keyColor": "32",
-      },
-      {
-          "type": "terminalfont",
-          "key": " └  ",
-          "keyColor": "32", 
-      },
-      "break",
-      {
-          "type": "host",
-          "format": "{5} {1} Type {2}",
-          "key": "PC   ",
-          "keyColor": "33",
-      },
-      {
-          "type": "cpu",
-          "format": "{1} ({3}) @ {7} GHz",
-          "key": " ├  ",
-          "keyColor": "33",
-      },
-      {
-          "type": "gpu",
-          "format": "{1} {2} @ {12} GHz",            
-          "key": " ├ 󰢮 ",
-          "keyColor": "33",
-      },
-      {
-          "type": "memory",
-          "key": " ├  ",
-          "keyColor": "33",
-      },
-      {
-          "type": "swap",
-          "key": " ├ 󰓡 ",
-          "keyColor": "33",
-      },
-      {
-          "type": "disk",
-          "key": " ├ 󰋊 ",
-          "keyColor": "33",
-      },
-      {
-          "type": "monitor",
-          "key": " └  ",
-          "keyColor": "33",
-      },
-      "break",
-      "break",
-  ]
+    "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+    "logo": {
+        //"type": "file",
+        //"source": "~/.config/fastfetch/cat.txt",
+        //"color": {
+        //    "1": "cyan",
+        //    "2": "red",
+        //    "3": "yellow",
+        //    "4": "blue",
+        //    "5": "green"
+        //}
+        "source": "~/.config/fastfetch/archpuccinn.png",
+        "type": "kitty",
+        "height": 16,
+        "width": 34,
+        "padding": {
+            "top": 4,
+            "left": 4
+        }
+    },
+    "modules": [
+        "break",
+        {
+            "type": "custom",
+            "format": "┌────────────────────── Hardware ──────────────────────┐",
+            "outputColor": "red"
+        },
+        {
+            "type": "title",
+            "key": " PC",
+            "keyColor": "green"
+        },
+        {
+            "type": "cpu",
+            "key": "│ ├󰍛CPU",
+            "showPeCoreCount": true,
+            "format": "{1}",
+            "keyColor": "green"
+        },
+        {
+            "type": "gpu",
+            "key": "│ ├󰍛 GPU",
+            "keyColor": "green"
+        },
+        {
+            "type": "memory",
+            "key": "└ └󰍛 Memory",
+            "keyColor": "green"
+        },
+        {
+            "type": "custom",
+            "format": "└──────────────────────────────────────────────────────┘",
+            "outputColor": "red"
+        },
+        "break",
+        {
+            "type": "custom",
+            "format": "┌────────────────────── Software ──────────────────────┐",
+            "outputColor": "red"
+        },
+        {
+            "type": "os",
+            "key": " OS",
+            "keyColor": "yellow"
+        },
+        {
+            "type": "kernel",
+            "key": "│ ├ Kernel",
+            "keyColor": "yellow"
+        },
+        {
+            "type": "packages",
+            "key": "│ ├󰏖 Packages",
+            "keyColor": "yellow"
+        },
+        {
+            "type": "shell",
+            "key": "│ ├ Shell",
+            "keyColor": "yellow"
+        },
+        {
+            "type": "command",
+            "key": "│ ├ OS Age",
+            "keyColor": "yellow",
+            "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
+        },
+        {
+            "type": "uptime",
+            "key": "└ └ Uptime",
+            "keyColor": "yellow"
+        },
+        "break",
+        {
+            "type": "de",
+            "key": " DE",
+            "keyColor": "blue"
+        },
+        {
+            "type": "lm",
+            "key": "│ ├ LM",
+            "keyColor": "blue"
+        },
+        {
+            "type": "wm",
+            "key": "│ ├ WM",
+            "keyColor": "blue"
+        },
+        {
+            "type": "gpu",
+            "key": "│ ├󰍛 GPU Driver",
+            "format": "{3}",
+            "keyColor": "blue"
+        },
+        {
+            "type": "wmtheme",
+            "key": "└ └󰉼 Theme",
+            "keyColor": "blue"
+        },
+
+        {
+            "type": "custom",
+            "format": "└────────────────────────────────────────────────────┘",
+            "outputColor": "red"
+        },
+        {
+            "type": "custom",
+            "format": "               \u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m "
+        },
+        "break",
+    ]
 }
