--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,10 +1,12 @@
 monitor=,preferred,auto,1.2,bitdepth,10
 debug:disable_scale_checks = true
-
+$HYPRSCRIPTS = ~/.config/hypr/scripts
 # exec-once = gentoo-pipewire-launcher restart
 exec-once = hyprpaper
 exec-once = hypridle
-exec-once = waybar
+# exec-once = waybar
+exec-once = hyprpanel
+exec-once = $HYPRSCRIPTS/nekoray.sh
 
 env = XCURSOR_SIZE,28
 env = XCURSOR_THEME,BreezeX-Black
@@ -19,13 +21,13 @@ input {
     kb_options = grp:win_space_toggle, #caps:swapescape
     follow_mouse = 1
     touchpad:natural_scroll = true
-    sensitivity = 0.3 =
+    sensitivity = 0.3
     numlock_by_default = true
 }
 
 general {
-    gaps_in = 0
-    gaps_out = 0
+    gaps_in = 1
+    gaps_out = 1
     border_size = 2
     col.active_border = rgba(888888ff)
     col.inactive_border = rgba(333333ff)
@@ -34,8 +36,8 @@ general {
 }
 
 decoration {
-    rounding = 2
-    blur:enabled = false
+    rounding = 3
+    blur:enabled = true
     shadow:enabled = false
 }
 
