--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,303 +1,106 @@
- // TIP: to get all install instructions for this config use
- // grep -E "^// " $HOME/.config/waybar/config.jsonc
- //
- // To install all packages by once:
- // sudo pacman -Syu --needed $(grep -Po '(?<=^\/\/ Install ).*' config | grep -v AUR)
- // or with AUR packages
- // paru -Syu --needed $(grep -Po '(?<=^\/\/ Install ).*' config | sed 's|(AUR)||g')
+{
+    "layer": "top",
+    "position": "right",
+    "mode": "dock",
+    "exclusive": true,
+    "passthrough": false,
+    "gtk-layer-shell": true,
+    "height": 0,
+    "modules-left": [
+        "clock",
+        "hyprland/workspaces",
+	"tray"
+    ],
+    "modules-center": ["hyprland/window"],
+    "modules-right": [
+	"backlight",
+	"pulseaudio",
+	"pulseaudio#microphone"
+    ],
 
-[
- {
-// Install otf-font-awesome ttf-font-logos(AUR)
-    //"layer": "top", // Waybar at top layer
-    "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 24, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
-    "spacing": 0, // Gaps between modules (4px)
-    // Choose the order of the modules
-    "modules-left":   ["niri/workspaces", "custom/weather"],
-    "modules-center": ["clock"],
-    "modules-right":  ["group/hardware", "custom/vpn"],
-    // Modules configuration
-    "niri/workspaces": {
-        "format": "{icon}",
+    "hyprland/window": {
+        "format": "󰣇 {}",
+	"max-length": 50,
+	"rotate": 270
+    },
+
+    "backlight": {
+        "device": "intel_backlight",
+        "format": "{icon} {percent}%",
+        "format-icons": ["󰃞", "󰃟", "󰃠"],
+        "on-scroll-up": "brightnessctl set 1%+",
+        "on-scroll-down": "brightnessctl set 1%-",
+        "min-length": 6,
+	"rotate": 270
+    },
+
+    "pulseaudio": {
+        "format": "{icon} {volume}%",
+        "tooltip": false,
+        "format-muted": " ",
+        "on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle",
+        "on-scroll-up": "wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%+",
+        "on-scroll-down": "wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-",
+        "scroll-step": 5,
         "format-icons": {
-            "active": "<big></big>",
-            "default": "<small></small>"
-        }
+            "headphone": "",
+            "hands-free": "",
+            "headset": "",
+            "phone": "",
+            "portable": "",
+            "car": "",
+            "default": ["","", "", ""]
+        },
+	"rotate": 270
     },
-// Install curl jq gnome-weather
-    "custom/weather": {
-        "format": "{}",
-        // "format-alt": "{alt}: {}",
-        // "format-alt-click": "click-right",
-        "interval": 1800,
-        "min-length": 40,
-        "align": 0.8,
-        "return-type": "json",
-        "exec": "$HOME/.config/waybar/modules/weather.sh",
-        "exec-if": "sleep 20 && ping -4 ifconfig.co -c1",
-        "on-click": "gnome-weather",
-        "on-click-middle": "$HOME/.config/waybar/modules/weather.sh reload && pkill -SIGRTMIN+12 waybar",
-        "signal": 12
+
+    "pulseaudio#microphone": {
+        "format": "{format_source}",
+        "format-source": " {volume}%",
+        "format-source-muted": " ",
+        "on-click": "wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle",
+        "on-scroll-up": "wpctl set-volume @DEFAULT_AUDIO_SOURCE@ 1%+",
+        "on-scroll-down": "wpctl set-volume @DEFAULT_AUDIO_SOURCE@ 1%-",
+        "scroll-step": 5,
+	"rotate": 270
     },
+    
+    "hyprland/workspaces": {
+        "disable-scroll": true,
+        "all-outputs": true,
+        "on-click": "activate",
+        "format": "{icon}",
+	"format-icons": {
+		"active": " ",
+		"default": " "
+	}
+    },
+
+    "tray": {
+        "icon-size": 13,
+        "spacing": 10
+    },
+
     "clock": {
-        "format": "{:%a %d %b %H:%M}",
-        "format-alt": "Week {:%V of the %Y}",
-        "tooltip-format": "<tt><small>{calendar}</small></tt>",
+        "format": "{:%H\n%M}",
+        "interval": 1,
+        "rotate": 0,
+        "tooltip-format": "<tt>{calendar}</tt>",
         "calendar": {
-            "mode"          : "month",
-            "mode-mon-col"  : 3,
-            "weeks-pos"     : "left",
-            "on-scroll"     : 1,
+            "mode": "month",
+            "mode-mon-col": 3,
+            "on-scroll": 1,
             "on-click-right": "mode",
             "format": {
-                "months":     "<span color='#ffead3'><b>{}</b></span>",
-                "days":       "<span color='#ecc6d9'><b>{}</b></span>",
-                "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
-                "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
-                "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+                "months": "<span color='#a6adc8'><b>{}</b></span>",
+                "weekdays": "<span color='#a6adc8'><b>{}</b></span>",
+                "today": "<span color='#a6adc8'><b>{}</b></span>",
+                "days": "<span color='#555869'><b>{}</b></span>"
             }
-        },
-        "actions":  {
-            "on-click-right": "mode",
-            "on-click-forward": "tz_up",
-            "on-click-backward": "tz_down",
-            "on-click-middle": "shift_reset",
-            "on-scroll-up": "shift_up",
-            "on-scroll-down": "shift_down"
-        }
-    },
-    "group/hardware": {
-        "orientation": "inherit",
-        "drawer": {
-            "transition-duration": 500,
-            "transition-left-to-right": false
-        },
-        "modules": [
-            "load",
-            "power-profiles-daemon",
-            "memory",
-            "temperature",
-            "battery",
-            "bluetooth",
-            "network",
-            "custom/logout"
-        ]
-    },
-    "load": {
-        "format": "{load1}  ",
-        "on-click": "kitty -e btop"
-    },
-// Install power-profiles-daemon
-    "power-profiles-daemon": {
-        "format": " {icon} ",
-        "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
-        "tooltip": true,
-        "format-icons": {
-            "default": "",
-            "performance": "",
-            "balanced": " ",
-            "power-saver": " "
-        }
-    },
-    "memory": {
-        "format": "",
-        "format-alt": "{used} Gb ",
-        "tooltip-format": "{percentage}%"
-    },
-    "temperature": {
-        // "thermal-zone": 2,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-        "critical-threshold": 80,
-        "format-critical": "  {temperatureC}°C {icon}",
-        "format": "{icon}",
-        "format-alt": "{temperatureC}°C {icon}",
-        "format-icons": ["", "", ""],
-        "tooltip": false
-    },
-// Install brightnessctl libnotify
-    "battery": {
-        "states": {
-            // "good": 95,
-            "warning": 20,
-            "critical": 5
-        },
-        "tooltip-format": "Charge: {capacity}%\nHealth: {health}%",
-        "format": "{icon}",
-        "format-charging": "",
-        "format-plugged": "",
-        "format-alt": "{time} {icon}",
-        "on-scroll-up": "brightnessctl -c backlight set +1; notify-send -c system ' Brightness: '$(brightnessctl -m | cut -d',' -f4) ",
-        "on-scroll-down": "brightnessctl -c backlight set 1-; notify-send -c system ' Brightness: '$(brightnessctl -m | cut -d',' -f4) ",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
-        "format-icons": [" ", " ", " ", " ", " "]
-    },
-    // "backlight": {
-    //     "device": "acpi_video1",
-    //     "tooltip-format": "Backlight: {percent}%",
-    //     "format": "{icon}",
-    //     "format-alt": "{percent}% {icon}",
-    //     "on-scroll-up": "brightnessctl -c backlight set +1",
-    //     "on-scroll-down": "brightnessctl -c backlight set 1-",
-    //     "format-icons": ["", "", "", "", "", "", "", "", ""]
-    // },
-// Install blueman pulseaudio-bluetooth
-// and https://wiki.archlinux.org/title/Bluetooth#Enabling_experimental_features
-    "bluetooth": {
-        "format": "  ",
-        "format-alt": "  ",
-        "format-connected": " {device_alias}  ",
-        "format-connected-battery": " {device_alias} {device_battery_percentage}%  ",
-        // "format-device-preference": [ "device1", "device2" ], // preference list deciding the displayed device
-        "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
-        "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
-        "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
-        "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%",
-        "on-click-right": "blueman-manager"
-    },
-// Install iwd fuzzel polkit
-    "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": " ",
-        "format-ethernet": "",
-        "tooltip-format-wifi": "  {essid}\nIP: {ipaddr}\nStrength: {signalStrength}%\nFreq: {frequency}MHz",
-        "tooltip-format-ethernet": " {ifname}\nIP: {ipaddr}",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}",
-        "on-click-right": "$HOME/.config/waybar/modules/wifiselector.sh",
-        "on-click-middle": "pkexec $HOME/.config/waybar/modules/vpn.sh wg0; pkill -SIGRTMIN+4 waybar"
-    },
-// Install wireguard-tools openresolv
-// Put your client wireguard config to '/etc/wireguard/wg0.conf'
-    "custom/vpn": {
-        "format": " ",
-        "exec": "echo '{\"class\": \"connected\", \"tooltip\": \"VPN is ON\"}'",
-        "exec-if": "test -d /proc/sys/net/ipv4/conf/wg0",
-        "return-type": "json",
-        "on-click": "pkexec $HOME/.config/waybar/modules/vpn.sh wg0; pkill -SIGRTMIN+4 waybar",
-        "signal": 4
-    },
-    "custom/logout": {
-        "format": " ",
-        "tooltip": false,
-        "on-click": "niri msg action quit"
-    }
-},
-{
-    //"layer": "top", // Waybar at top layer
-    "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 24, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
-    "spacing": 0, // Gaps between modules (4px)
-    // Choose the order of the modules
-    "modules-left": ["mpris"],
-    "modules-center": ["wlr/taskbar"],
-    "modules-right": ["niri/language", "custom/updates", "custom/gsconnect", "custom/unmount", "tray", "custom/clipboard","pulseaudio"],
-    "mpris": {
-        //"interval": 5,
-        "dynamic-order": ["artist", "title"],
-        "dynamic-len": 97,
-        "format": "{player_icon} {dynamic}",
-        "tooltip-format": "{album}",
-        "format-paused": "{status_icon} <i>{dynamic}</i>",
-        "player-icons": {
-            "default": " "
-        },
-        "status-icons": {
-            "paused": " "
-        },
-    // "ignored-players": ["firefox"]
-    },
-    "niri/language": {
-        "format": "{}",
-        "on-click": "niri msg action switch-layout next",
-        "format-en": "🇺🇸 En",
-        "format-ru": "🇷🇺 Ru",
-        "min-length": 10,
-        "align": 0.1
-    },
-// Install mpv mpv-mpris wl-clipboard fuzzel
-    "custom/streamplay": {
-        "format": "",
-        "tooltip-format": "Open live stream from clipboard",
-        "on-click": "mpv --terminal=no --profile=notebook \"$(wl-paste | fuzzel --dmenu -l0 -w50 --prompt=\"Stream: $(wl-paste)\")\"",
-        "on-click-middle": "fuzzel",
-        "on-click-right": "niri msg action maximize-column"
-    },
-    "wlr/taskbar": {
-        "format": "{icon}",
-        "icon-size": 24,
-        //"tooltip-format": "{title} | {app_id}",
-        "on-click": "activate",
-        "on-click-middle": "fuzzel",
-        "on-click-right": "niri msg action maximize-column"
-    },
-// Install paru(AUR)
-    "custom/updates": {
-        "format": "{}  ",
-        "interval": "once",
-        "return-type": "json",
-        "exec": "$HOME/.config/waybar/modules/updates.sh",
-        "on-click": "kitty -e '$HOME/.config/waybar/modules/updates.sh getnews && pkill -SIGRTMIN+9 waybar'",
-        "signal": 9
-    },
-// Install python-pydbus ydotool gsconnect(AUR)
-// then 'sudo usermod -aG input $USER' AND REBOOT
-    "custom/gsconnect" : {
-        "format": "{}",
-        // "min-length": 30,
-        // "align": 0.2,
-        "format-alt": "{alt}",
-        "tooltip": false,
-        "interval": 10,
-        "return-type": "json",
-        "escape": true,
-        "exec": "$HOME/.config/waybar/modules/gsconnect-status.py",
-        "on-click-right": "/usr/share/gnome-shell/extensions/gsconnect@andyholmes.github.io/gsconnect-preferences",
-    },
-// Install fuzzel
-    "custom/unmount": {
-        "format": "{}  ",
-        "interval": 10,
-        "return-type": "json",
-        "exec": "$HOME/.config/waybar/modules/unmount.sh",
-        "on-click": "$HOME/.config/waybar/modules/unmount.sh unmount",
-        "signal": 10
-    },
-    "tray": {
-        "spacing": 3
-    },
-// Install cliphist wl-clipboard libnotify fuzzel
-    "custom/clipboard": {
-        "format": "{}  ",
-        "tooltip": false,
-        "on-click": "$HOME/.config/waybar/modules/clipboard.sh",
-        "on-click-middle": "$HOME/.config/waybar/modules/clipboard.sh wipe"
-    },
-// Install pavucontrol pipewire-media-session pulseaudio pulseaudio-alsa
-    "pulseaudio": {
-        "scroll-step": 5, // %, can be a float
-        "tooltip-format": "{volume}%",
-        "format": "{icon}", //"{format_source}",
-        "format-bluetooth": "{icon}{format_source}",
-        "format-bluetooth-muted": " {icon}{format_source}",
-        "format-muted": " {format_source}",
-        "format-source": "{volume}%",
-        "format-source-muted": "",// " ",
-        "format-icons": {
-            "headphone": " ",
-            "hands-free": "",
-            "headset": "",
-            "phone": " ",
-            "portable": " ",
-            "car": " ",
-            "default": [" ", " ", " "]
-        },
-        "on-click": "pavucontrol",
-        "on-click-middle": "pactl set-sink-mute @DEFAULT_SINK@ toggle"
+	},
+	"actions": {
+	    "on-scroll-up": "shift_up",
+	    "on-scroll-down": "shift_down"
+	}
     }
 }
-]
